[ADD][setup/cloudinary] Config cloudinary for upload image for Playlist

--- a/music-library-api/.env.local
+++ b/music-library-api/.env.local
@@ -5,3 +5,8 @@ HTTP_PORT=8080
 # Mongo
 MONGO_URI=mongodb://root:Admin%40123@mongo_db:27017
 DB_NAME=music_library
+
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=dhwuwy0to
+CLOUDINARY_API_KEY=569153767496484
+CLOUDINARY_API_SECRET=ghXq0iY8RhWbqBcJaide7W-34RY
