[ADD][setup/deploy-production] Setup .env for deploy Render

--- a/music-library-api/.env.prod
+++ b/music-library-api/.env.prod
@@ -3,10 +3,11 @@ DB_HOST=mongo_db
 HTTP_PORT=8080
 
 # Mongo
-MONGO_URI=mongodb://root:Admin%40123@mongo_db:27017
+MONGO_URI=mongodb+srv://mongoatlasadmin:Admin%40123@golangbookmanagementdb.thsp62s.mongodb.net/?appName=GolangBookManagementDB
 DB_NAME=music_library
 
 # CLOUDINARY
 CLOUDINARY_CLOUD_NAME=dhwuwy0to
 CLOUDINARY_API_KEY=569153767496484
 CLOUDINARY_API_SECRET=ghXq0iY8RhWbqBcJaide7W-34RY
+
