[ADD][feat/user] implement initial music library API with user authentication, track, and playlist management.

--- a/music-library-api/.env.prod
+++ b/music-library-api/.env.prod
@@ -1,3 +1,6 @@
+# ⚠️ WARNING: These keys are intentionally committed to Git. This is NOT an accidental leak.
+# They are all free-tier / demo credentials, so don't get too excited.
+
 ENV=prod
 DB_HOST=mongo_db
 HTTP_PORT=8080
@@ -11,3 +14,9 @@ CLOUDINARY_CLOUD_NAME=dhwuwy0to
 CLOUDINARY_API_KEY=569153767496484
 CLOUDINARY_API_SECRET=ghXq0iY8RhWbqBcJaide7W-34RY
 
+# JWT
+JWT_SECRET=$2y$10$gt91HcXq5yv1IgbKivEv1Oghi/1n3Nr45vHav2caJYj/Qv6MQeDZG
+JWT_EXPIRATION=72h
+
+# Admin Role Key (pass this during registration to become admin)
+ADMIN_ROLE_KEY=$2y$10$bv5r99ekcfAPTXemoYRcFOsqyw0xa9i.3F/pFbSXoy.nKBtHhll16
