--- a/music-library-api/.env.local
+++ b/music-library-api/.env.local
@@ -1,3 +1,6 @@
+# ⚠️ WARNING: These keys are intentionally committed to Git. This is NOT an accidental leak.
+# They are all free-tier / demo credentials, so don't get too excited.
+
 ENV=dev
 DB_HOST=mongo_db
 HTTP_PORT=8080
@@ -10,3 +13,10 @@ DB_NAME=music_library
 CLOUDINARY_CLOUD_NAME=dhwuwy0to
 CLOUDINARY_API_KEY=569153767496484
 CLOUDINARY_API_SECRET=ghXq0iY8RhWbqBcJaide7W-34RY
+
+# JWT
+JWT_SECRET=$2y$10$uR9/G2DH3t0gpUTjTyQ6yenQ892SW3hd7OINPQ7JBrUFVfaTajB0y
+JWT_EXPIRATION=1h
+
+# Admin Role Key (pass this during registration to become admin)
+ADMIN_ROLE_KEY=$2y$10$ZR8WkmEtxox86RfqRxfJIupqFLUNvGD.uWX3QGxUhZ6s/rJ5iYbpK
