[UPDATE][feat/user] Add complete music library application with Go API and Next.js frontend, featuring authentication, tracks, and playlists.

--- a/music-library-api/.env.prod
+++ b/music-library-api/.env.prod
@@ -15,8 +15,8 @@ CLOUDINARY_API_KEY=569153767496484
 CLOUDINARY_API_SECRET=ghXq0iY8RhWbqBcJaide7W-34RY
 
 # JWT
-JWT_SECRET=$2y$10$gt91HcXq5yv1IgbKivEv1Oghi/1n3Nr45vHav2caJYj/Qv6MQeDZG
+JWT_SECRET=improok-jwt-secret-key-prod-2026-change-me-in-real-deployment
 JWT_EXPIRATION=72h
 
 # Admin Role Key (pass this during registration to become admin)
-ADMIN_ROLE_KEY=$2y$10$bv5r99ekcfAPTXemoYRcFOsqyw0xa9i.3F/pFbSXoy.nKBtHhll16
+ADMIN_ROLE_KEY=improok-admin-secret-key-prod-2026
